--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a marker clusterer for baidu map javascript api v3.0 based on canvas",
   "main": "index.js",
   "scripts": {
-    "dev": "",
+    "dev": "webpack-dev-server",
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,6 +31,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.2.0",
     "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.43.0",
