--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.2.0",
     "html-webpack-plugin": "^4.3.0",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
