--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "homepage": "https://github.com/llcat/BMapLib.CanvasMarkerClusterer#readme",
   "dependencies": {
-    "zrender": "^4.3.1"
+    "zrender": "4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
